src/objects/AB2__AdBookOpportunityOrderManagerGroup__c.object
<CustomObject>
    <description>Association between the Opportunity and the AdBook Order Manager Group (Rep Type with  IsOrderManagerRepType)</description>
    <fields>
        <fullName>AB2__Opportunity__c</fullName>
        <description>The Opportunity being associated with the OrderManagerRepType</description>
        <inlineHelpText>The Opportunity being associated with the OrderManagerRepType</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>AdBook Opportunity Order Manager Groups</relationshipLabel>
        <relationshipName>AdBookOpportunityOrderManagerGroups</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AB2__RepTypeId__c</fullName>
        <description>AdBook RepTypeId</description>
        <formula>AB2__RepType__r.AB2__RepTypeId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>AdBook RepTypeId</inlineHelpText>
        <label>RepTypeId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AB2__RepType__c</fullName>
        <description>The AdBook Rep Type that is marked with IsOrderManagerRepType</description>
        <inlineHelpText>The AdBook Rep Type that is marked with IsOrderManagerRepType</inlineHelpText>
        <label>AdBook Rep Type</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Rep Type must be flagged with IsOrderManagerRepType</errorMessage>
            <filterItems>
                <field>AB2__RepType__c.AB2__IsOrderManagerRepType__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>The Rep Type must be flagged with IsOrderManagerRepType</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AB2__RepType__c</referenceTo>
        <relationshipLabel>AdBook Opportunity Order Manager Groups</relationshipLabel>
        <relationshipName>AdBook_Opportunity_Order_Manager_Groups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>AdBook Opportunity Order Manager Group</label>
    <nameField>
        <displayFormat>OMG-{0000}</displayFormat>
        <label>AdBook Opportunity Manager Group</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AdBook Opportunity Order Manager Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>